# tenant-permission-audit

./: .gitignore  DEBRIEF.md.j2  Makefile  README.md  README.md.j2  pyproject.toml  template.yaml  translucid-template.json
.github/workflows/: template-validation.yml
candidate/: Makefile  README.md  docker-compose.yml  pyproject.toml
candidate/fixtures/public/: access_cases.jsonl  assignments.json  resources.json  users.json
candidate/migrations/: 001_init.sql
candidate/policies/: access.rego
candidate/src/: __init__.py  app_api.py  evaluator.py  permission_graph.py  report.py
candidate/tests/public/: load_target.py  test_integration_access.py  test_policy_contract.py
docs/: template_progress.md  template_rules.md
evaluator/: docker-compose.evaluator.yml  rubric.md  run_hidden.sh
evaluator/fixtures_hidden/: access_cases_hidden.jsonl
evaluator/tests_hidden/: conftest.py  test_tenant_permission_hidden.py
generators/: generate_fixture.py  scenarios.yaml
metadata/: safety_policy.json  source_mapping_rules.json
solution/: SOLUTION.md.j2
solution/expected/: denied_cross_tenant.json
solution/src/: audit.py  config.py  evaluator.py  permission_graph.py  policy_client.py  resource_store.py
solution/tests/: reference_test.py
source-dossiers/: tenant-permission-audit.md
tools/: check_published_repo_contract.py  expect_candidate_docker_failure.sh  expect_candidate_failure.sh  render_template.py  scan_safety.py  validate_personalization.py  validate_rendered_smoke.sh
