[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tenant-permission-audit-candidate"
version = "0.1.0"
description = "Candidate starter for the tenant permission audit challenge"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.1",
  "requests>=2.31",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[tool.setuptools]
packages = ["src"]
